Bug 233631 GetApplicationLocale should not be used with FormatTime methods in order to support user's customisation (OS X is affected) patch by Constantine A. Murenin <cnst+moz@bugmail.mojo.ru> mailnews part: r=mscott intl part: r=jshin both: sr=roc a=chofmann